<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="30dp"
    android:orientation="vertical"
    tools:context=".ui.delete.DeleteFragment">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/rattman_m"
        android:text="@string/eliminar_deudor"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/tamano_two" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_nombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:hint="@string/buscar_nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/bt_eliminar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:background="@color/goldenrod"
        android:text="@string/eliminar_botom"
        android:textColor="@color/black" />
</LinearLayout>